--- a/templates/Citas.html
+++ b/templates/Citas.html
@@ -35,9 +35,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputEmail" type="email" placeholder="C.C" />
-                                                <label for="inputEmail">Documento de identidad</label>
+                                            <div class="row">
+							                    <label class="field" for="identificationType">Tipo de Identificación *</label> <select id="identificationType" name="slect"><option value="empty">Seleccione una opción</option><option value="CC">Cédula de Ciudadanía</option><option value="TI">Tarjeta de Identidad</option><option value="CE">Cédula de Extranjería</option><option value="PA">Pasaporte</option><option value="NIT">NIT</option><option value="NUIP">NUIP</option></select>
                                             </div>
                                             <div class="form-floating mb-3">
                                                 <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
@@ -76,7 +75,7 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Pacientes
                             </a>
-        </div>
+                            </div>
             <div id="layoutAuthentication_footer">
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
