--- a/templates/Perfil_pacientes.html
+++ b/templates/Perfil_pacientes.html
@@ -32,7 +32,7 @@
                                 Inicio
                             </a>
                         </a></li>
-                        <li><a class="dropdown-item" href="#!">Comentarios</a></li>
+                        <li><a class="dropdown-item" href="PQR.html">PQR</a></li>
                         <li><a class="dropdown-item" href="#!">Datos personales</a></li>
                     </ul>
                 </li>
