--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="panel first-column">
-            <a class="logo" href="/login"><img src="mdn-logo-sm.png" alt="logo"></a>
+            <a class="logo" href="/"><img src="static\imagenes\logo_Border.png" alt="logo" width="100" height="100"></a>
             <div class="spacer"></div>
             <div class="icons-container">  
                 <i class="fas fa-user-md fa-9x"></i>
