--- a/static/css/superadmin_usuarios.scss
+++ b/static/css/superadmin_usuarios.scss
@@ -54,6 +54,6 @@ body {
     padding-left: 20px;
 }
 
-.side-dashboard {
+.side-users {
     background: linear-gradient(90deg, $secondary-color 0%, $primary-color 100%);
 }
