--- a/static/css/superadmin.css
+++ b/static/css/superadmin.css
@@ -4,9 +4,7 @@ body {
   display: flex;
   margin: 0px;
   font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
+  width: 100%;
 }
 
 .sidebar {
@@ -75,5 +73,100 @@ body {
 .side-dashboard {
   background: -webkit-gradient(linear, left top, right top, from(#7c2ae8), to(#5271ff));
   background: linear-gradient(90deg, #7c2ae8 0%, #5271ff 100%);
+}
+
+.dashboard {
+  padding: 2rem;
+  display: -ms-grid;
+  display: grid;
+  width: 80%;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2rem;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #fff;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0px 0px 10px dimgray;
+          box-shadow: 0px 0px 10px dimgray;
+  height: 130px;
+}
+
+.icon-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 40%;
+  height: 100%;
+  background: #7c2ae8;
+}
+
+.fas {
+  color: white;
+}
+
+.info-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 60%;
+  height: 100%;
+  font-weight: 300;
+}
+
+.label, .statistic {
+  margin: 5px;
+  font-size: 18px;
+  text-align: center;
+}
+
+.statistic {
+  font-size: 24px;
+}
+
+.table {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-column: 1/5;
+}
+
+th, td {
+  padding: 15px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:hover {
+  background-color: #5271ff;
+  color: white;
 }
 /*# sourceMappingURL=superadmin.css.map */
