--- a/static/css/superadmin.scss
+++ b/static/css/superadmin.scss
@@ -5,7 +5,7 @@ body {
     display: flex;
     margin: 0px;
     font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    align-items: stretch;
+    width: 100%;
 }
 
 .sidebar {
@@ -56,4 +56,70 @@ body {
 
 .side-dashboard {
     background: linear-gradient(90deg, $secondary-color 0%, $primary-color 100%);
+}
+
+.dashboard {
+    padding: 2rem;
+    display: grid;
+    width: 80%;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 2rem;
+    height: fit-content;
+}
+
+.card {
+    display: flex;
+    background: #fff;
+    align-items: center;
+    box-shadow: 0px 0px 10px rgb(105, 105, 105);
+    height: 130px;
+}
+
+.icon-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40%;
+    height: 100%;
+    background: #7c2ae8;
+}
+
+.fas {
+    color: white;
+}
+
+.info-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 60%;
+    height: 100%;
+    font-weight: 300;
+}
+
+.label, .statistic {
+    margin: 5px;
+    font-size: 18px;
+    text-align: center;
+}
+
+.statistic {
+    font-size: 24px;
+}
+
+.table {
+    grid-column: 1/5;
+}
+
+th, td {
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+tr:nth-child(even) {background-color: #f2f2f2;}
+
+tr:hover {background-color: $primary-color;
+    color: white;
 }
