--- a/static/css/superadmin_usuarios.css
+++ b/static/css/superadmin_usuarios.css
@@ -4,9 +4,6 @@ body {
   display: flex;
   margin: 0px;
   font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
 }
 
 .sidebar {
@@ -75,5 +72,15 @@ body {
 .side-users {
   background: -webkit-gradient(linear, left top, right top, from(#7c2ae8), to(#5271ff));
   background: linear-gradient(90deg, #7c2ae8 0%, #5271ff 100%);
+}
+
+.dashboard {
+  padding: 2rem;
+  display: -ms-grid;
+  display: grid;
+  width: 80%;
+  -ms-grid-columns: repeat 4, 1fr;
+      grid-template-columns: repeat 4, 1fr;
+  grid-gap: 2rem;
 }
 /*# sourceMappingURL=superadmin_usuarios.css.map */
