--- a/static/css/superadmin_usuarios.scss
+++ b/static/css/superadmin_usuarios.scss
@@ -5,7 +5,6 @@ body {
     display: flex;
     margin: 0px;
     font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    align-items: stretch;
 }
 
 .sidebar {
@@ -56,4 +55,12 @@ body {
 
 .side-users {
     background: linear-gradient(90deg, $secondary-color 0%, $primary-color 100%);
+}
+
+.dashboard {
+    padding: 2rem;
+    display: grid;
+    width: 80%;
+    grid-template-columns: repeat (4, 1fr);
+    grid-gap: 2rem;
 }
